# yarm

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.txt  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  yarm.yaml
.github/: labels.yml  labels_disabled.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  config.md  index.md  postprocess.md  reference.md  requirements.txt  roadmap.md  usage.md
docs/config/: altered_columns.rst  altered_columns_tables_config.rst  basic.rst  complete.md  config_complete.yaml  config_mwe.yaml  index.md  minimum.md  options.md  path_relative.rst  solutions.md
docs/postprocess/: postprocess_after.yaml  postprocess_before.yaml
docs/validate/: validate_key_import.yaml  validate_key_input.yaml  validate_key_output.yaml  validate_key_queries.yaml  validate_key_tables_config.yaml  validate_key_tables_config_datetime.yaml  validate_key_tables_config_pivot.yaml
src/yarm/: .#helpers.py  __init__.py  __main__.py  console.py  export.py  helpers.py  queries.py  schema.py  settings.py  tables.py  validate.py
src/yarm/templates/: __init__.py  config_schema.yaml  yarm.yaml
src/yarm/tests_data/: test_config_bad_options.yaml  test_config_bad_yaml.yaml  test_create_tables.yaml  test_validate_complete_config_valid.yaml  test_validate_fails_check_is_file.yaml  test_validate_include_hierarchy.yaml  test_validate_missing_required_key.yaml  test_validate_tables_config_valid_mwe.yaml  test_verbose_levels.yaml  valid_config.yaml
src/yarm/tests_data/test_config_bad_yaml/: yarm.yaml
src/yarm/tests_data/test_create_tables/: .~lock.orders.xlsx#  orders.xlsx  products.csv  yarm.yaml
src/yarm/tests_data/test_df_empty/: yarm.yaml
src/yarm/tests_data/test_df_input_options/: outputtest.db  tests.xlsx  tmp.yaml  yarm.yaml
src/yarm/tests_data/test_df_tables_config_options/: minimum.yaml  orders.xlsx  products_merge_missing_cols.csv  products_merge_value_error.csv  products_no_merge.csv  products_pivot2.csv  slugify_error.yaml  slugify_error_datetime.csv  slugify_error_pivot.csv  tmp.yaml  tmp_merge.yaml  yarm.yaml
src/yarm/tests_data/test_prep_config_copies_files/: yarm.yaml
src/yarm/tests_data/test_queries_options/: custom.py  orders.xlsx  postprocess_key_error.yaml  postprocess_no_import.yaml  postprocess_not_found.yaml  postprocess_return_empty_df.yaml  postprocess_return_str.yaml  postprocess_wrong_args_1.yaml  products.csv  query_duplicate.yaml  query_empty.yaml  query_error.yaml  query_replace_column_error.yaml  tests.xlsx  (+3 more)
tests/: .#test_validate.py  __init__.py  helpers.py  test_console.py  test_export.py  test_functional.py  test_helpers.py  test_main.py  test_queries.py  test_tables.py  test_validate.py
(+47 files in other folders)
