[tool.poetry]
name = "yarm"
version = "0.1.0"
authors = ["Bill Alive <public+git@billalive.com>"]
description = "Yet another report maker."
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/billalive/yarm"
repository = "https://github.com/billalive/yarm"
keywords = ["yarm"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.3.3"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yarm = "yarm.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["yarm"]

[tool.coverage.report]
show_missing = true
fail_under = 100
